use Java 17 and Python 3.9 in multistage build for biosimulators_vcell